still working on fixing alignment of Books and Hotlines text, instead of using inline css, now changed to h6 instead of h5 and adding h6 code to css file

--- a/index.css
+++ b/index.css
@@ -89,6 +89,16 @@ body {
             color: #B3B3B3;
         }
 
+        h6 {
+            font-family: "Merienda";
+            font-weight: 400;
+            font-size: 20px;
+            
+            text-align: left;
+            
+            color: #B3B3B3; 
+        }
+
         main ul {
             font-family: "proxima-nova", sans-serif;
             font-size: 16px;
